# pi_render

./: .gitignore  Cargo.toml  README.md
crates/pi_2d/: Cargo.toml
crates/pi_2d/src/: lib.rs
crates/pi_crevice/: Cargo.toml  README.md
crates/pi_crevice/crevice_tests/: Cargo.toml
crates/pi_crevice/crevice_tests/src/: gpu.rs  lib.rs
crates/pi_crevice/pi_crevice_derive/: Cargo.toml
crates/pi_crevice/pi_crevice_derive/src/: glsl.rs  layout.rs  lib.rs
crates/pi_crevice/src/: glsl.rs  lib.rs  std140.rs  std430.rs
crates/pi_crevice/src/std140/: mod.rs  sizer.rs  traits.rs  writer.rs
crates/pi_crevice/src/std430/: sizer.rs  traits.rs  writer.rs
crates/pi_crevice/tests/: test.rs
crates/pi_derive/: Cargo.toml
crates/pi_derive/src/: enum_variant_meta.rs  lib.rs  modules.rs
crates/pi_render/: Cargo.toml
crates/pi_render/src/: lib.rs
crates/pi_render/src/camera/: active_cameras.rs  bundle.rs  camera.rs  mod.rs  projection.rs
crates/pi_render/src/color/: mod.rs
crates/pi_render/src/graph/: context.rs  edge.rs  graph.rs  mod.rs  node.rs  node_slot.rs  runner.rs
crates/pi_render/src/hal_wrapper/: device.rs  mod.rs  shader.rs
crates/pi_render/src/mesh/: mod.rs
crates/pi_render/src/primitives/: mod.rs
crates/pi_render/src/render_graph/: edge.rs  graph.rs  mod.rs  node.rs  node_slot.rs  runner.rs
crates/pi_render/src/rhi/: bind_group.rs  buffer.rs  device.rs  mod.rs  pipeline.rs  shader.rs  texture.rs  uniform_vec.rs
crates/pi_render/src/texture/: mod.rs  texture_cache.rs
crates/pi_render/src/view/: mod.rs  window.rs
crates/pi_render_utils/: Cargo.toml
crates/pi_render_utils/src/: enum_variant_meta.rs
crates/render_compile/: Cargo.toml  README.md
crates/render_compile/output/: color.rs
crates/render_compile/source/: camera.glsl  color.vert  text.vert
crates/render_compile/src/: Untitled-1.js  file.rs  lib.rs
crates/render_compile_test/: Cargo.toml  build.rs  output.frag  output.vert
crates/render_compile_test/src/: main.rs  test_shader.rs
crates/render_compile_test/src/shaders/: aa.rs  camera.rs  camera1.glsl  camera1.rs  color.frag  color.rs  color.vert  image.frag  image.rs  image.vert  mod.rs  sdf.glsl  sdf.rs  test.frag  test.rs  test.vert  text.frag  text.rs  text.vert  ui_meterial.glsl  ui_meterial.rs
crates/render_core/: Cargo.toml  README.md
crates/render_core/documents/: generic_graph.md
crates/render_core/examples/: image_texture.rs  shader3d.rs
crates/render_core/src/: font.rs  lib.rs  math.rs  wgpu.rs
crates/render_core/src/asset/: mod.rs
crates/render_core/src/camera/: active_cameras.rs  mod.rs  render_target.rs
crates/render_core/src/color/: colorspace.rs  mod.rs
crates/render_core/src/components/: mod.rs  option_slotmap.rs
crates/render_core/src/depend_graph/: graph.rs  graph_data.rs  mod.rs  node.rs  param.rs  sub_graph.rs  sub_graph2.rs  sub_graph_data.rs
crates/render_core/src/generic_graph/: graph.rs  mod.rs  node.rs  param.rs
crates/render_core/src/graph/: graph.rs  mod.rs  node.rs  node_slot.rs  param.rs  runner.rs
crates/render_core/src/graph_new/: graph.rs  mod.rs  node.rs  param.rs
crates/render_core/src/new_graph/: mod.rs
crates/render_core/src/pass/: clear_pass.rs  mod.rs
crates/render_core/src/phase/: draw.rs  draw_state.rs  mod.rs
crates/render_core/src/render_3d/: mod.rs
crates/render_core/src/render_graph/: graph.rs  mod.rs  node.rs  runner.rs
crates/render_core/src/render_nodes/: clear_color.rs  clear_pass.rs  mod.rs
crates/render_core/src/renderer/: attributes.rs  bind.rs  bind_buffer.rs  bind_group.rs  buffer.rs  buildin_data.rs  buildin_var.rs  draw_obj.rs  draw_obj_list.rs  error.rs  indices.rs  instance.rs  mod.rs  pipeline.rs  sampler.rs  shader.rs  shader_stage.rs  texture.rs  vertex_buffer.rs  vertex_buffer_desc.rs  vertex_buffer_loader.rs  vertex_format.rs  vertices.rs
crates/render_core/src/rhi/: asset.rs  bind_group.rs  bind_group_layout.rs  block_alloc.rs  buffer.rs  buffer_alloc.rs  device.rs  draw_obj.rs  dyn_uniform_buffer.rs  id_alloter.rs  mod.rs  options.rs  pipeline.rs  shader.rs  small_struct_allocator.rs  texture.rs  uniform_vec.rs
crates/render_crevice/: Cargo.toml
crates/render_crevice/crevice_tests/: Cargo.toml
crates/render_crevice/render_crevice_derive/: Cargo.toml
crates/render_crevice/src/: glsl.rs  lib.rs
crates/render_crevice/tests/: test.rs
crates/render_data_container/: Cargo.toml
crates/render_data_container/src/: lib.rs  vertex_layout_key.rs
crates/render_derive/: Cargo.toml
crates/render_derive/src/: enum_variant_meta.rs  lib.rs  modules.rs  shader_meta.rs
crates/render_geometry/: Cargo.toml
crates/render_geometry/src/: buildin_var.rs  geometry.rs  indices.rs  lib.rs  vertex_attribute.rs  vertex_buffer_desc.rs  vertex_code.rs  vertex_data.rs
crates/render_macro_utils/: Cargo.toml
crates/render_macro_utils/src/: lib.rs
crates/render_material/: Cargo.toml  README.MD
crates/render_material/src/: binding.rs  buffer.rs  lib.rs  material.rs  texture.rs  uniform_common.rs  uniform_info.rs
crates/render_pipeline/: Cargo.toml
crates/render_pipeline/src/: fragment_state.rs  lib.rs
crates/render_pipeline_key/: Cargo.toml
crates/render_pipeline_key/src/: fragment_state.rs  pipeline_key.rs
crates/render_resource/: Cargo.toml
crates/render_resource/examples/: shader.rs
crates/render_resource/src/: base.rs  bind_group.rs  bind_group_.rs  bind_group_layout.rs  data_texture2d.rs  lib.rs  sampler.rs  texture.rs  texture2d.rs  uniform_buffer.rs
crates/render_shader/: Cargo.toml
crates/render_shader/resource/: test.frag  test.vert
crates/render_shader/src/: attributes.rs  block_code.rs  buildin_data.rs  buildin_var.rs  geometry_code.rs  instance_code.rs  lib.rs  light_about_code.rs  material_code.rs  scene_about_code.rs  set_bind.rs  shader.rs  shader_bind.rs  shader_data_kind.rs  shader_set.rs  skin_code.rs  texture_sampler_code.rs  unifrom_code.rs  varying_code.rs  vs_begin_code.rs
crates/render_utils/: Cargo.toml
crates/render_utils/src/: enum_variant_meta.rs  hashed.rs  lib.rs
src/: lib.rs
(+164 files in other folders)
