[package]
name = "pi_render"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Render for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi", "render"]

[features]
webgl = ["render_core/webgl"]

[workspace]
members = ["crates/*"]

[dependencies]
render_core = { path = "crates/render_core" }
render_material = { path = "crates/render_material" }
render_geometry = { path = "crates/render_geometry" }
render_data_container = { path = "crates/render_data_container" }

[dev-dependencies]
pi_futures = "0.1"
pi_slotmap = "0.1"
pi_share = "0.4"
pi_async = "0.5"
pi_map = "0.1"
pi_hash = "0.1"

nalgebra = "0.30"
winit = { git = "http://ser.yinengyun.com:10082/tech/winit.git" }
log = "0.4"
wgpu = "0.13"
env_logger = "0.9"
float-ord = "0.3"

pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }

render_derive = {path = "crates/render_derive"}

[[example]]
name = "hello_winit"
path = "examples/hello_winit/main.rs"

[[example]]
name = "clean"
path = "examples/clean/main.rs"

[patch.crates-io]
pi_assets={ path = "../pi_assets" }
# pi_ecs = { path = "../pi_ecs" }

# [patch."https://github.com/GaiaWorld/pi_hal"]
# pi_hal = { path = "../pi_hal" }

# [patch."https://github.com/GaiaWorld/pi_ecs"]
# pi_ecs = { path = "../pi_ecs" }
