[package]
name = "pi_render"
version = "0.1.4"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Render for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi", "render"]

[features]
webgl = ["render_core/webgl"]

[workspace]
members = ["crates/*"]


[dependencies]
render_core = { path = "crates/render_core", version = "0.1", registry = "yn" }

[dev-dependencies]
pi_futures = "0.1"
pi_slotmap = "0.1"
pi_share = "0.4"
pi-async-rt = "0.1"
pi_map = "0.1"
pi_hash = "0.1"

nalgebra = "0.32"
winit = { registry = "yn", version = "0.27"}
log = "0.4"
wgpu = "0.16"
env_logger = "0.9"
float-ord = "0.3"
lazy_static = "1.4"

render_derive = {path = "crates/render_derive", version = "0.1", registry = "yn"}
criterion = "0.4"
render_core = {path = "crates/render_core", version = "0.1", registry = "yn"}
pi_hal = { version = "0.1", registry = "yn" }

[[example]]
name = "hello_winit"
path = "examples/hello_winit/main.rs"

[[example]]
name = "clean"
path = "examples/clean/main.rs"

# [patch.crates-io]
# pi_async_graph = { path = "../pi_async_graph" }
# pi_assets = { path = "../pi_assets" }

# [patch."https://github.com/GaiaWorld/pi_hal"]
# pi_hal = { path = "../pi_hal" }

[[bench]]
name = "id_alloter_bench"
path = "benches/id_alloter_bench.rs"
harness = false

[[bench]]
name = "buffer_alloter"
path = "benches/buffer_alloter.rs"
harness = false

