[package]
name = "pi_render"
version = "0.3.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Render for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi", "render"]

[features]
webgl = ["render_core/webgl"]
debug_info = ["render_core/debug_info"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
serde = "1"

[dependencies]
render_core = { path = "crates/render_core", version = "0.3", registry = "yn" }

[dev-dependencies]
pi_futures = "0.1"
pi_slotmap = "0.2"
pi_share = "0.5"
pi-async-rt = "0.2"
pi_map = "0.2"
pi_hash = "0.1"

nalgebra = "0.32"
winit = { registry = "yn", version = "0.27"}
log = "0.4"
wgpu = "25.0.*"
env_logger = "0.9"
float-ord = "0.3"
lazy_static = "1.4"

render_derive = {path = "crates/render_derive", version = "0.2", registry = "yn"}
criterion = "0.4"
crossbeam = "0.8"
render_core = {path = "crates/render_core", version = "0.3", registry = "yn"}
pi_hal = { version = "0.3", registry = "yn" }
pi_assets = "0.15"

[[example]]
name = "hello_winit"
path = "examples/hello_winit/main.rs"

[[example]]
name = "clean"
path = "examples/clean/main.rs"

[[bench]]
name = "id_alloter_bench"
path = "benches/id_alloter_bench.rs"
harness = false

[[bench]]
name = "buffer_alloter"
path = "benches/buffer_alloter.rs"
harness = false


[patch.crates-io]
# pi_async_graph = { path = "../pi_async_graph" }
# pi_assets = { path = "../pi_assets" }

[patch.yn]
pi_hal = { path = "../pi_hal" }
# pi_sdf = { path = "../pi_sdf" }
pi_wgpu = {path = "../pi_wgpu"}
# pi_egl = {path = "../pi_egl"}
# winit = { path = "../winit"}

