[package]
name = "pi_2d"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "CSS Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]

[dependencies]
async = { path = "../../../pi_lib/async" }
async_graph = { path = "../../../pi_lib/async_graph" }
graph = { path = "../../../pi_lib/graph" }
pi_crevice = { path = "../pi_crevice", features = ["nalgebra"] }
pi_ecs = { path = "../../../pi_ecs" }
pi_render_utils = { path = "../pi_render_utils" }
pi_render = { path = "../pi_render" }

futures = "0.3"
log = "0.4"
naga = { version = "0.8", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
nalgebra = "0.30"
raw-window-handle = "0.4"
thiserror = "1.0"
wgpu = { version = "0.12", features = ["spirv"] }