[package]
name = "pi_crevice"
version = "0.1.0"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "Create GLSL-compatible versions of structs with explicitly-initialized padding"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["glsl", "std140", "std430"]

[features]
default = ["std"]
std = []

[dependencies]
pi_crevice_derive= { version = "0.1.0", path = "pi_crevice_derive" }

bytemuck = "1.4.1"
mint = "0.5.8"

cgmath = { version = "0.18", optional = true }
glam = { version = "0.20", features = ["mint"], optional = true }
nalgebra = { version = "0.30", features = ["mint"], optional = true }

[dev-dependencies]
insta = "0.16.1"
