[package]
name = "pi_derive"
version = "0.1.0"
edition = "2021"
description = "Provides derive implementations for Pi Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[lib]
proc-macro = true

[dependencies]
pi_macro_utils = { path = "../pi_macro_utils", version = "0.1.0" }

quote = "1.0"
syn = "1.0"
