[package]
name = "pi_render"
version = "0.1.0"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]

[dependencies]
pi_crevice = { path = "../pi_crevice" }
pi_ecs = { path = "../../../pi_ecs" }
hash = {path = "../../../pi_lib/hash"}

anyhow = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
naga = { version = "0.8", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
nalgebra = "0.30"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
regex = "1.5"
raw-window-handle = "0.4"
smallvec = { version = "1.6", features = ["union", "const_generics"] }
thiserror = "1.0"
wgpu = { version = "0.12", features = ["spirv"] }
