[package]
name = "pi_render"
version = "0.1.0"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]

[dependencies]
async = { path = "../../../pi_lib/async" }
async_graph = { path = "../../../pi_lib/async_graph" }
graph = { path = "../../../pi_lib/graph" }
hash = { path = "../../../pi_lib/hash" }
pi_crevice = { path = "../pi_crevice", features = ["nalgebra"] }
pi_ecs = { path = "../../../pi_ecs" }
pi_render_utils = { path = "../pi_render_utils" }

anyhow = "1.0"
downcast-rs = "1.2"
futures = "0.3"
hex = "0.4"
log = "0.4"
naga = { version = "0.8", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
nalgebra = "0.30"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
regex = "1.5"
raw-window-handle = "0.4"
thiserror = "1.0"
wgpu = { version = "0.12", features = ["spirv"] }
