[package]
name = "pi_render_utils"
version = "0.1.0"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "Render Utils for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]

[dependencies]
pi_derive = { path = "../pi_derive" }

[dev-dependencies]
