[package]
name = "render_compile"
version = "0.1.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi", "compile", "shader"]

[dependencies]
pi_naga = { git="https://github.com/GaiaWorld/pi_naga.git", features=["glsl-in", "wgsl-in", "spv-in"]}
naga="0.9"
thiserror = "1.0"
Inflector = "0.11"
pi_ordmap = "0.2"
pi_atom = "0.2"
log = "0.4"
regex = "1.5"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
render_core = { path = "../render_core"}
pi_hash = "0.1"

[dev-dependencies]
pi_hash = "0.1"

