[package]
name = "render_compile"
version = "0.3.0"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi", "compile", "shader"]

[dependencies]
# 因为naga的语法检查太严格，但本编译程序允许输入着色器的一个小片段，存在着色器代码不全的问题，在这情况下依然需要通过语法检查，因此修改了naga代码以满足要求
# 此naga只在编译时使用，运行时应该使用第三方naga库
pi_naga = { version="0.1", registry = "yn", features=["glsl-in", "wgsl-in", "spv-in"]}
thiserror = "1.0"
Inflector = "0.11"
pi_ordmap = "0.2"
pi_atom = "0.6"
log = "0.4"
regex = "1.5"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
pi_hash = "0.1"
naga = { version="25.0.*", features=["glsl-in", "wgsl-in", "spv-in", "compact"]}

[dev-dependencies]
pi_hash = "0.1"

