[package]
name = "render_core"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]
webgl = []
location = []
trace=[]

[dependencies]
# pi_share = {version="0.4", features=["serial", "rc"]}
# pi_async = {version="0.5", features=["serial"]}
# pi_futures = {version="0.1", features=["local"]}

paste = "1.0"
pi_futures = "0.1"
pi_async = "0.5"
pi_share = "0.4"
pi_async_graph = "0.4"
pi_assets = "0.11"
pi_graph = "0.1"
pi_hash = "0.1"
pi_map = "0.1"
pi_null = "0.1"
pi_ecs_macros = "0.1"
pi_slotmap = "0.1"

graphviz-rust = "0.6"

normpath = "1.1.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

bitvec = { version = "1.0", features = ["serde"] }
render_utils = { version = "0.1", path = "../render_utils" }
render_crevice = { version = "0.1", path = "../render_crevice", features = [
    "nalgebra",
] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
downcast-rs = "1.2"
hex = "0.4"
log = "0.4"
naga = { version = "0.11"}
nalgebra = "0.32"
parry3d = "0.13"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
regex = "1.5"
thiserror = "1.0"
pi_slab = "0.1"
wgpu = { version = "0.15", default-features = false, features = ["glsl"] }
derive-deref-rs = "0.1"
pi_any = "0.1"
pi_time = "0.2.6"
# pi_res_loader = {  git = "https://github.com/GaiaWorld/pi_res_loader.git" }
# pi_res_loader = { path = "../../../pi_res_loader" }
# pi_res = { path = "../../../pi_res" }
# pi_res_macros = { path = "../../../pi_res/macros" }
futures = "0.3"
guillotiere = { version = "0.6" }
smallvec = "1.8"
lazy_static = "1.4"
pi_atom = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }

pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

# wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

parking_lot = "0.12"
crossbeam="0.8"
ktx = "0.3"

[dev-dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
render_derive={path="../render_derive"}
env_logger = "0.9"
winit = {git = "http://ser.yinengyun.com:10082/tech/winit.git"}


[[example]]
name = "shader3d"
path = "examples/shader3d.rs"