[package]
name = "render_core"
version = "0.2.10"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Renderer for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]
default = ["debug_info"]
webgl = []
location = []
trace=[]
debug_info = ["serde"]

[dependencies]
# pi_share = {version="0.4", features=["serial", "rc"]}
# pi_async = {version="0.5", features=["serial"]}
# pi_futures = {version="0.1", features=["local"]}
ahash="0.8"
petgraph = "0.6"
paste = "1.0"
pi_futures = "0.1"
pi-async-rt = "0.2"
pi_share = "0.5"
pi_async_graph = "0.7"
pi_assets = "0.15"
pi_graph = "0.2"
pi_hash = "0.1"
pi_map = "0.2"
pi_null = "0.1"
pi_ecs_macros = "0.1"
pi_slotmap = "0.2"
derive_deref = "1.1"

graphviz-rust = "0.6"
pi_print_any = "0.1"

normpath = "1.1.1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

serde = { workspace = true, features = ["derive"], optional = true }
bitvec = { version = "1.0"}
render_utils = { version = "0.2", path = "../render_utils", registry = "yn" }
render_crevice = { version = "0.2", registry = "yn", path = "../render_crevice", features = [
    "nalgebra",
] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
downcast-rs = "1.2"
hex = "0.4"
log = "0.4"
naga = { version = "0.19", features = ["glsl-in"]}
nalgebra = "0.32"
parry3d = "0.13"
once_cell = "1.4" # TODO: replace once_cell with std equivalent if/when this lands: https://github.com/rust-lang/rfcs/pull/2788
regex = "1.5"
thiserror = "1.0"
pi_slab = "0.1"
wgpu = {version = "0.2", registry = "yn", package="pi_wgpu"}
derive-deref-rs = "0.1"
pi_any = "0.1"
# pi_time = "0.3"
futures = "0.3"
guillotiere = { version = "0.6" }
smallvec = "1.8"
lazy_static = "1.4"
pi_atom = "0.6"
bytemuck = { version = "1.4", features = ["derive"] }

pi_hal = { version = "0.2", registry = "yn" }
# pi_sdf = { version = "0.1", registry = "yn" }

# wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

parking_lot = "0.12"
crossbeam="0.8"
ktx = "0.3"
pi_key_alloter = "0.6"
backtrace = "0.3"


[dev-dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
render_derive={path="../render_derive", version = "0.2", registry = "yn"}
env_logger = "0.9"
winit = { registry = "yn", version = "0.27"}
wgpu = {version = "0.2", registry = "yn", package="pi_wgpu", features = ["use_wgpu"]}
