[package]
name = "render_crevice"
version = "0.1.1"
authors = ["moyy <moyy@gmail.com>"]
edition = "2021"
description = "Create GLSL-compatible versions of structs with explicitly-initialized padding"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["glsl", "std140", "std430"]

[features]
default = ["std"]
std = []

[dependencies]
render_crevice_derive= { version = "0.1.0", path = "render_crevice_derive", registry = "yn" }

bytemuck = "1.4.1"
mint = "0.5.8"

cgmath = { version = "0.18", optional = true }
glam = { version = "0.20", features = ["mint"], optional = true }
nalgebra = { version = "0.32", features = ["mint"], optional = true }

[dev-dependencies]
insta = "1.12"
