[package]
name = "render_data_container"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "scene data container."
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["scene data container"]

[dependencies]
nalgebra = "0.30"
pi_slotmap = "0.1"
pi_share = "0.4"
pi_assets = "0.10"
pi_atom = { version="0.2", features = ["serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
wgpu = { version = "0.13", features = ["spirv", "glsl"] }

render_core = { path = "../render_core" }

# [[example]]
