[package]
name = "render_derive"
version = "0.2.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Provides derive implementations for Pi Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[lib]
proc-macro = true

[dependencies]
render_macro_utils = { path = "../render_macro_utils", version = "0.2", registry = "yn" }

quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
