[package]
name = "render_material"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data material."
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["Scene material"]

[dependencies]
wgpu = { version = "0.13", features = ["spirv", "glsl"] }
nalgebra = "0.30"
bytemuck = { version = "1.4", features = ["derive"] }
pi_share = "0.4"
pi_slotmap = "0.1"
render_data_container = { path = "../render_data_container" }
render_geometry = { path = "../render_geometry" }
render_core = { path = "../render_core" }

# [[example]]
