[package]
name = "render_pipeline"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["scene pipeline key"]

[dependencies]
wgpu = { version = "0.13", features = ["spirv", "glsl"] }

pi_share = "0.4"
pi_assets = "0.10"
pi_slotmap = "0.1"
pi_hash = "0.1"
render_geometry = { path = "../render_geometry" }
render_shader = { path = "../render_shader" }
render_core = { path = "../render_core" }

# [[example]]
