[package]
name = "render_pipeline_key"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data render."
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["scene pipeline key"]

[dependencies]
wgpu = { version = "0.14", features = ["spirv", "glsl"] }

# [[example]]
