[package]
name = "render_resource"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "render resource"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["render resource"]

[dependencies]
wgpu = { version = "0.13", features = ["spirv", "glsl"] }
nalgebra = "0.30"
bitvec = { version = "1.0", features = ["serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"

pi_assets = "0.10"
pi_share = "0.4"
pi_slotmap = "0.1"
pi_hash = "0.1"
pi_atom={version="0.2", features = ["serde"]}

render_core = { path = "../render_core" }
render_shader = { path = "../render_shader" }

winit = { git = "http://ser.yinengyun.com:10082/tech/winit.git" }
pi_async = "0.5"

[[example]]
name = "shader"
path = "examples/shader.rs"
