[package]
name = "render_shader"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Scene Data Geometry."
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = [" shader"]

[dependencies]
wgpu = { version = "0.13", features = ["spirv", "glsl"] }
bytemuck = { version = "1.4", features = ["derive"] }
derive_deref = "1.1"
nalgebra = "0.30"

naga = { version = "0.9", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }

pi_share = "0.4"
pi_assets = "0.10"
pi_slotmap = "0.1"
pi_hash = "0.1"
pi_atom = { version="0.2", features = ["serde"] }

render_core = { path = "../render_core" }

[patch."https://github.com/GaiaWorld/pi_share.git"]
pi_share = { path = "../../../pi_share" }

# [[example]]
