[package]
name = "render_utils"
version = "0.2.1"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Render Utils for PI Engine"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]

[dependencies]
render_derive = { path = "../render_derive", version = "0.1", registry = "yn" }
ahash = "0.8"

[dev-dependencies]
