[package]
name = "crevice_tests"
version = "0.1.0"
authors = ["moyy <myy412001799@gmail.com>"]
edition = "2021"
description = "Tests for Derive crate"
repository = "https://github.com/GaiaWorld/pi_render"
license = "MIT OR Apache-2.0"
keywords = ["pi"]

[features]
wgpu-validation = ["wgpu", "naga", "futures"]

[dependencies]
pi_crevice = { path = ".." }
pi_crevice_derive = { path = "../pi_crevice_derive", features = ["debug-methods"] }

anyhow = "1.0.44"
bytemuck = "1.7.2"
memoffset = "0.6.4"
mint = "0.5.5"

futures = { version = "0.3.17", features = ["executor"], optional = true }
naga = { version = "0.8.0", features = ["glsl-in", "wgsl-out"], optional = true }
wgpu = { version = "0.12.0", optional = true }
